slightly more detailed news:
svn log svn://svn.r-forge.r-project.org/svnroot/multitable

*************************************
**				   **
**	multitable version 1.5	   **
**				   **
*************************************

NEW FEATURES

	new vignette, which matches the journal
	of statistical software paper.

	added a read.matrix function for loading
	in data as a matrix (instead of as a
	data frame).  useful to keep track of
	whether a table of data should be added
	to a data list as a 2-dimensional
	variable or as a set of 1-dimensional 
	variables.
	

BUG FIXES

	fixed bug #2008: 'incompatible dimensions
	in y' error message called inappropriately

	fixed bug #2159: 'dlapply failing where it
	shouldn't'.  test added.

*************************************
**				   **
**	multitable version 1.4	   **
**				   **
*************************************

BUG FIXES

	the data.list print method in version 1.3 
	printed unnecessary information about the
	dimensions of replication.  this has been
	fixed.

	some fourth-corner problem data sets
	without dimnames were failing to be 
	created with data.list. the reason was
	because the condition indicating that
	dimnames should be matched (to produce
	the relationship structure) was TRUE,
	even though dimnames were not present.
	this has been fixed and many tests
	added.

	some silly unit tests were removed.

*************************************
**				   **
**	multitable version 1.3	   **
**				   **
*************************************

NEW FEATURES

	added two new functions, dropdl and dropl,
	that drop data list dimensions with only
	one level and null list elements
	respectively.

	added a data list method for the generic
	functions 'with' and 'within' in base.
	note that within.data.list is still
	considered experimental.

	added a dims_to_vars function that 
	creates new variables out of dimensions
	of replication.  i found myself doing
	this enough to warrant a function.

	added a utility function (not loaded to